fixed cart alignment

--- a/Lab 2/styles/style.css
+++ b/Lab 2/styles/style.css
@@ -16,6 +16,11 @@
 
 }
 
+.cartTotal {
+  white-space: pre-line;
+  font-size: 20px;
+}
+
 .storename {
   text-align: center;
   font-family: "Times New Roman", Times, serif;
